# chittychat_API

./: .development.env  .env  .env.example  .gitignore  .test.env  Cargo.toml  Dockerfile  schema.rs
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2023-04-08-010742_create_users/: down.sql  up.sql
src/: main.rs  schema.rs
src/database/: actors.rs  insertables.rs  messages.rs  mod.rs  setup.rs
src/model/: db.rs  session.rs  user.rs
src/routes/: mod.rs  user.rs
src/tests/: load_envs.rs  mod.rs  utils.rs
src/utils/: load_envs.rs  mod.rs
